fix visible mobile menu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2377,7 +2377,7 @@ footer {
   position: absolute;
   top: -100%;
   left: 0;
-  z-index: 100;
+  z-index: -1;
   width: 100%;
   height: 100dvh;
   background-color: black;
@@ -2385,7 +2385,8 @@ footer {
   transition: all 0.3s ease; }
   .menu_mobile.active {
     top: 0;
-    left: 0; }
+    left: 0;
+    z-index: 100; }
   .menu_mobile .head_burger {
     display: flex;
     flex-direction: row;
