--- a/assets/sass/layout/_page.scss
+++ b/assets/sass/layout/_page.scss
@@ -3179,7 +3179,7 @@ footer {
   position: absolute;
   top: -100%;
   left: 0;
-  z-index: 100;
+  z-index: -1;
   width: 100%;
   height: 100dvh;
   background-color: black;
@@ -3188,6 +3188,7 @@ footer {
   &.active {
     top: 0;
     left: 0;
+    z-index: 100;
   }
   .head_burger {
     display: flex;
